<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#E8D1C5"
    tools:context=".AddEditPemesananActivity">

    <TextView
        android:id="@+id/Judul"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="PEMESANAN BARANG"
        android:textColor="@color/black"
        android:layout_marginLeft="50dp"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/edit_nama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nama Barang"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Judul"/>
    <EditText
        android:id="@+id/edit_jumlah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Jumlah"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_nama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/edit_alamatBengkel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Alamat Bengkel"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_jumlah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="SAVE"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_alamatBengkel"
        android:layout_marginTop="20dp"
        app:backgroundTint="#B8926A"
        />
    <Button
        android:id="@+id/button_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="UPDATE"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save"
        android:layout_marginTop="20dp"
        app:backgroundTint="#B8926A"
        />

</androidx.constraintlayout.widget.ConstraintLayout>